--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Angular and Browserify</title>
+  <title>Parsley Test</title>
   <link rel="stylesheet" href="css/normalize.css"></link>
   <link rel="stylesheet" href="css/unsemantic-grid-responsive.css"></link>
   <link rel="stylesheet" href="css/app.css"></link>
